--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 <body>
 
     <!-- Optional Audio -->
-    <audio id="introSound" src="assets/audio/intro.mp3" preload="auto"></audio>
+    <audio id="introSound" src="intro.mp3" preload="auto"></audio>
+
 
     <div class="splash">
         <div class="logo" id="logoText">
