--- a/home.html
+++ b/home.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            margin: 0;
-            font-family: 'Segoe UI', system-ui, sans-serif;
-            background: linear-gradient(135deg, #0f3d2e, #000);
-            background-size: 300% 300%;
-            animation: bgMove 12s ease infinite;
-            color: #fff;
-        }
+    margin: 0;
+    font-family: 'Segoe UI', system-ui, sans-serif;
+    /* background image */
+    background: url('background.jpg') no-repeat center center fixed;
+    background-size: cover; /* cover entire viewport */
+    color: #fff;
+}
+
 
         header {
             text-align: center;
