--- a/details.html
+++ b/details.html
@@ -4,60 +4,34 @@
 <meta charset="UTF-8">
 <title>Busanso Nation | Movie Details</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/017eaf7e3f.js" crossorigin="anonymous"></script>
-
 <style>
-body{background:#0b0b0b;color:#fff;font-family:Poppins,system-ui,sans-serif}
-
-/* HEADER BACKDROP */
-.header{
-  height:360px;
-  background:
-    linear-gradient(to top,#0b0b0b 20%,rgba(0,0,0,.4)),
-    url("https://image.tmdb.org/t/p/original/8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg")
-    center/cover no-repeat;
-  padding:30px;
-  display:flex;
-  align-items:flex-end;
-}
-
-.title{font-size:2rem;font-weight:900}
-.meta{color:#ccc;font-size:.85rem}
-
-/* BUTTONS */
-.btn-main{background:#f5c46a;color:#000;border:none;border-radius:25px;padding:10px 22px;font-weight:700}
-.btn-sub{background:#ff7a18;color:#000;border:none;border-radius:25px;padding:10px 22px;font-weight:700}
-
-/* CONTENT */
-.section{padding:20px}
-.section h5{color:#f5c46a;margin-bottom:10px}
-
-/* EPISODES */
-.episodes{display:flex;gap:12px;overflow-x:auto}
-.episode{min-width:220px;background:#111;border-radius:10px;overflow:hidden;cursor:pointer}
-.episode img{width:100%;height:130px;object-fit:cover}
-.episode div{padding:8px}
-.episode h6{font-size:.85rem}
-.episode p{font-size:.7rem;color:#bbb}
-
-/* PLAYER */
-.player iframe{width:100%;height:220px;border-radius:10px}
-footer{padding:20px;font-size:.75rem;color:#aaa;background:#050505}
+body {background:#0b0b0b;color:#fff;font-family:Poppins,system-ui,sans-serif;margin:0;}
+.header {position:relative;width:100%;height:350px;background:#000 center/cover no-repeat;display:flex;align-items:flex-end;padding:20px;}
+.header::after {content:"";position:absolute;top:0;left:0;width:100%;height:100%;background:linear-gradient(to top, #0b0b0b 20%, rgba(0,0,0,0.4));}
+.header-content {position:relative;z-index:1;}
+.title {font-size:2rem;font-weight:900;}
+.meta {color:#ccc;font-size:.9rem;margin-top:5px;}
+.btn-main, .btn-sub {border:none;border-radius:25px;padding:10px 22px;font-weight:700;}
+.btn-main {background:#f5c46a;color:#000;}
+.btn-sub {background:#ff7a18;color:#000;}
+.section {padding:20px;}
+.section h5 {color:#f5c46a;margin-bottom:10px;}
+.player iframe {width:100%;height:400px;border-radius:10px;}
+footer {padding:20px;font-size:.75rem;color:#aaa;background:#050505;text-align:center;}
 </style>
 </head>
-
 <body>
 
-<!-- HEADER -->
-<div class="header">
-  <div>
-    <div class="title">When the Phone Rings</div>
-    <div class="meta">2024 • Mystery • Drama • ⭐ 8.4 IMDb</div>
+<!-- HEADER WITH POSTER -->
+<div class="header" id="header">
+  <div class="header-content">
+    <div class="title" id="movie-title"></div>
+    <div class="meta" id="movie-meta"></div>
     <div class="mt-3">
       <button class="btn-main mr-2" onclick="playTrailer()">▶ Watch Trailer</button>
-      <button class="btn-sub" onclick="playFullMovie()">▶ Watch Full Movie</button>
+      <button class="btn-sub" onclick="watchNow()">▶ Watch Now</button>
     </div>
   </div>
 </div>
@@ -65,84 +39,58 @@ footer{padding:20px;font-size:.75rem;color:#aaa;background:#050505}
 <!-- OVERVIEW -->
 <div class="section">
   <h5>Overview</h5>
-  <p>
-    A rising politician and his mute wife’s tense marriage begins to unravel
-    after a mysterious phone call turns their lives upside down.
-  </p>
+  <p id="movie-overview"></p>
 </div>
 
-<!-- VIDEO PLAYER -->
+<!-- PLAYER -->
 <div class="section player" id="player" style="display:none">
-  <h5 id="playerTitle">Now Playing</h5>
-  <iframe id="playerFrame" src="" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<!-- EPISODES -->
-<div class="section">
-  <h5>Episodes</h5>
-  <div class="episodes">
-    <div class="episode" onclick="playEpisode('Episode 1','https://www.youtube.com/embed/dQw4w9WgXcQ')">
-      <img src="https://image.tmdb.org/t/p/w500/6ELCZlTA5lGUops70hKdB83WJxH.jpg">
-      <div>
-        <h6>Episode 1</h6>
-        <p>Marriage tension rises after the first call.</p>
-      </div>
-    </div>
-    <div class="episode" onclick="playEpisode('Episode 2','https://www.youtube.com/embed/dQw4w9WgXcQ')">
-      <img src="https://image.tmdb.org/t/p/w500/6ELCZlTA5lGUops70hKdB83WJxH.jpg">
-      <div>
-        <h6>Episode 2</h6>
-        <p>The truth begins to surface.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- CTA -->
-<div class="section text-center">
-  <h5>Want Full Access?</h5>
-  <p>Unlock all episodes, movies & live TV</p>
-  <button class="btn-sub" onclick="location.href='packages.html'">
-    Subscribe Now
-  </button>
+  <iframe id="player-frame" src="" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <footer>
-  © 2026 Busanso Nation • Premium African & International Entertainment
+© 2026 Busanso Nation • Premium African & International Entertainment
 </footer>
 
 <script>
-/* ================= PLAYER ================= */
-function playTrailer(){
-  document.getElementById("player").style.display="block";
-  document.getElementById("playerFrame").src = "https://www.youtube.com/embed/dQw4w9WgXcQ";
-  document.getElementById("playerTitle").innerText = "Trailer";
-  document.getElementById("player").scrollIntoView({behavior:"smooth"});
+// Example movie data
+const movie = {
+  title: "When the Phone Rings",
+  year: 2024,
+  genre: "Mystery, Drama",
+  rating: 8.4,
+  overview: "A rising politician and his mute wife’s tense marriage begins to unravel after a mysterious phone call.",
+  poster: "https://image.tmdb.org/t/p/original/8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg",
+  trailer: "https://www.youtube.com/embed/dQw4w9WgXcQ",
+  fullMovie: "https://drive.google.com/file/d/ABC123/preview" // Paid content
+};
+
+// Populate movie details
+document.getElementById("movie-title").innerText = movie.title;
+document.getElementById("movie-meta").innerText = `${movie.year} • ${movie.genre} • ⭐ ${movie.rating} IMDb`;
+document.getElementById("movie-overview").innerText = movie.overview;
+document.getElementById("header").style.backgroundImage = `url('${movie.poster}')`;
+
+// Play trailer (free for everyone)
+function playTrailer() {
+  const player = document.getElementById("player");
+  const frame = document.getElementById("player-frame");
+  frame.src = movie.trailer;
+  player.style.display = "block";
+  player.scrollIntoView({behavior:"smooth"});
 }
 
-function playFullMovie(){
-  const hasPin = localStorage.getItem("activePin");
-  if(hasPin){
-    document.getElementById("player").style.display="block";
-    document.getElementById("playerFrame").src = "https://www.youtube.com/embed/dQw4w9WgXcQ";
-    document.getElementById("playerTitle").innerText = "Full Movie";
-    document.getElementById("player").scrollIntoView({behavior:"smooth"});
+// Watch full movie (requires paid user with PIN stored in localStorage)
+function watchNow() {
+  const pin = localStorage.getItem("userPIN"); // Example: user PIN stored locally
+  if(pin && pin.length > 0) {
+    const player = document.getElementById("player");
+    const frame = document.getElementById("player-frame");
+    frame.src = movie.fullMovie;
+    player.style.display = "block";
+    player.scrollIntoView({behavior:"smooth"});
   } else {
-    alert("Please subscribe to watch the full movie.");
-    location.href='packages.html';
-  }
-}
-
-function playEpisode(title, src){
-  const hasPin = localStorage.getItem("activePin");
-  if(hasPin){
-    document.getElementById("player").style.display="block";
-    document.getElementById("playerFrame").src = src;
-    document.getElementById("playerTitle").innerText = title;
-    document.getElementById("player").scrollIntoView({behavior:"smooth"});
-  } else {
-    alert("Episodes are for subscribers only. Please subscribe.");
-    location.href='packages.html';
+    // Redirect to subscription page if no PIN found
+    window.location.href = "packages.html";
   }
 }
 </script>
