--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
         </div>
 
         <div class="tagline">
-            Welcome Back, Uganda 🇺🇬
+            Omusanso wange, nsanyuse okulaba
         </div>
 
         <div class="message">
-            Elections are over — let’s unite & relax and enjoy quality entertainment
+            welcome to the source of unique and quality Movies and series
         </div>
 
         <div class="loader"></div>
@@ -135,7 +135,7 @@
     <script>
         // Redirect after 6 seconds
         setTimeout(function () {
-            window.location.href = "go:home.html";
+            window.location.href = "home.html";
         }, 6000);
     </script>
 
