--- a/watch.html
+++ b/watch.html
@@ -65,6 +65,7 @@ footer{text-align:center;font-size:.85rem;margin-top:15px;opacity:.7;}
     <a href="series.html" class="btn series">📺 Series</a>
     <a href="packages.html" class="btn renew">⏳ Extend</a>
     <a href="donate.html" class="btn donate">💖 Donate</a>
+     <a href="busansocity.html" class="btn donate">💖 Join Busanso City</a>
   </div>
 
   <div class="countdown" id="countdownDisplay"></div>
